[package]
name = "flasher"
version = "0.1.1"
edition = "2021"
description = "Flash firmware onto Teensy 4.x microcontrollers via HalfKay bootloader"
license = "MIT"
repository = "https://github.com/usinput/teensy4x-flasher"

[[bin]]
name = "flasher"
path = "src/main.rs"

[dependencies]
hidapi = { version = "2", features = ["linux-static-hidraw"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1.0"

[target.'cfg(windows)'.dependencies]
hidapi = { version = "2", features = ["windows-native"] }
